--- a/UI-MVC/Views/Playlist/PlaylistTable.cshtml
+++ b/UI-MVC/Views/Playlist/PlaylistTable.cshtml
@@ -22,6 +22,7 @@
         <th>Artist</th>
         <th>Album</th>
     </tr>
+    @{var countVotes = 0;}
     @foreach (PlaylistTrack track in Model.PlaylistTracks)
     {
         <tr class="track">
@@ -34,28 +35,30 @@
             <td class="tracktitle">
                 @track.Track.Title
             </td>
-            @{ 
-                var thumbUpId = track.Id + " thumbUp";
-                var thumbDownId = track.Id + " thumbDown";
-                Vote vote = track.Votes.FirstOrDefault(v => v.User.Email == User.Identity.Name);
-                if(vote == null)
-                {
+            @{  
+                            var thumbUpId = track.Id + " thumbUp";
+                            var thumbDownId = track.Id + " thumbDown";
+                            Vote vote = track.Votes.FirstOrDefault(v => v.User.Email == User.Identity.Name);
+                            if(vote == null)
+                            {
                     <td style="width:60px"><a onclick="addVote('@thumbUpId', '1', '@track.Id')" style="cursor: pointer; margin:0; padding:0;"><i id="@thumbUpId" class="material-icons grey400">thumb_up</i></a></td>
                     <td style="width:60px"><a onclick="addVote('@thumbDownId', '-1', '@track.Id')" style="cursor: pointer"><i id="@thumbDownId" class="material-icons grey400">thumb_down</i></a></td>
                 }
                 else
+                { 
+                countVotes += 1;
+                if (vote.Score == 1)
                 {
-                    if (vote.Score == 1)
-                    {
                         <td style="width:10px"><i class="material-icons">thumb_up</i></td>
                         <td style="width:10px"><i class="material-icons grey400">thumb_down</i></td>
-                    }
-                    else {
+                        }
+                        else {
                         <td style="width:10px"><i class="material-icons grey400">thumb_up</i></td>
                         <td style="width:10px"><i class="material-icons">thumb_down</i></td>
-                    }
+                        }
+                     
                 }
-            }
+                }
             <td>
                 @TimeSpan.FromSeconds(track.Track.Duration).ToString().Replace("00:", "")
             </td>
@@ -79,8 +82,10 @@
         $.ajax({
             url: '@Url.Action("AddVote")',
             method: 'POST',
-            data: { vote: vote, id: id},
+            data: { vote: vote, id: id, @countVotes: aantalVotes},
         }).done(alert("check"))
-        changeColor(element, vote)}
+            changeColor(elemen)
+           @countVotes += 1;
+    }
 </script>
 
