--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -33,8 +33,7 @@
         <h1>Create a playlist</h1>
         <p>The first step to using BeatBuddy is to create a playlist. Choose a title and description, and add some tracks to get your personal party going.</p>
     </div>
-    <div class="col-md-4 intro-item">
-        <i class="material-icons">people</i>
+    <div class="col-md-4 intro-item"><i class="material-icons">people</i>
         <h1>Invite friends</h1>
         <p>Share your playlist with your friends and invite them to join. Registered people (beatbuddies, if you will) can add tracks to the playlist too, and contribute to your musical awesomeness!</p>
     </div>
