--- a/UI-MVC/Content/Portal.css
+++ b/UI-MVC/Content/Portal.css
@@ -1,5 +1,4 @@
 ﻿section {
-  margin-top: 50px;
   margin-bottom: 30px;
   width: 100%; }
 
@@ -18,9 +17,10 @@ h3 {
   position: relative;
   overflow: hidden;
   margin-bottom: 1em;
-  background-image: url(https://unsplash.com/photos/pFqrYbhIAXs/download);
+  background-image: url(/Content/img/login-banner.jpg);
   background-size: cover;
-  background-position: center center; }
+  background-position: center center;
+  margin-bottom: 2em; }
   .loggedin-banner .banner-content {
     padding: 10% 5em 1em 5em;
     margin: 0 auto;
@@ -63,7 +63,12 @@ h3 {
   height: 100px;
   border-radius: 100%;
   float: left;
-  margin-right: 16px; }
+  border: 1px solid white;
+  margin-right: 16px;
+  background: rgba(0, 0, 0, 0.4); }
+
+.playlist-image:hover {
+  border: 1px solid black; }
 
 .clear-playlist {
   clear: both; }
