--- a/UI-MVC/Content/Portal.scss
+++ b/UI-MVC/Content/Portal.scss
@@ -1,6 +1,5 @@
 ﻿section
 {
-    margin-top: 50px;
     margin-bottom: 30px;
     width: 100%;
 }
@@ -25,9 +24,10 @@ h3
     position: relative;
     overflow: hidden;
     margin-bottom: 1em;
-    background-image: url(https://unsplash.com/photos/pFqrYbhIAXs/download);
+    background-image: url(/Content/img/login-banner.jpg);
     background-size: cover;
-    background-position: center center;    
+    background-position: center center;
+    margin-bottom: 2em;  
 
     .banner-content
     {
@@ -87,9 +87,13 @@ h3
     height: 100px;
     border-radius: 100%;
     float: left;
+    border: 1px solid white;
     margin-right: 16px;
+    background: rgba(0,0,0,0.4)
 }
-
+.playlist-image:hover{
+    border: 1px solid black;
+}
 .clear-playlist
 {
     clear: both;
